# readme_from_mkdocs

./: .pre-commit-hooks.yaml  pyproject.toml  readme_from_mkdocs.py
